feat: Implementar endpoints REST para gestión de Reactivos e Insumos
- Crear ReactivoDTO y ReactivoCreateDTO con validaciones
- Crear InsumoDTO y InsumoCreateDTO con validaciones
- Crear ReactivoService con lógica de negocio completa
- Crear InsumoService con lógica de negocio completa
- Crear ReactivoController con endpoints CRUD completos
- Crear InsumoController con endpoints CRUD completos
- Endpoints Reactivos: GET /api/reactivos, /activos, /{id}, /codigo/{codigo}
- Endpoints Reactivos: GET /vencimiento/antes con parámetro fecha
- Endpoints Insumos: GET /api/insumos, /activos, /{id}, /codigo/{codigo}
- Endpoints Insumos: GET /buscar/categoria con query parameter
- POST, PUT, DELETE para ambos recursos con soft delete
- Documentación completa con Swagger/OpenAPI